Refactor: Replace `new Integer()` with `Integer.valueOf()`
Updated all occurrences of `new Integer()` to `Integer.valueOf()` for better performance and to adhere to modern Java best practices. This ensures reduced memory overhead and eliminates unnecessary object creation.